welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
for (x<-0 to 6) {
		if (!estSurBiscuit()) {
			avance();
		}
def haveBaggle():Boolean = {
	
	}
	if (estSurBiscuit()) {
		return true;
	}
}